--- a/public/css/estilos.css
+++ b/public/css/estilos.css
@@ -1,20 +1,51 @@
+html, body {
+    height: 100%;
+    margin: 0;
+    position: relative;
+}
+
+p{
+    margin: 0;
+}
+
+.wrapper {
+    min-height: calc(100% - 50px); /* Ajusta según la altura del pie de página */
+}
+
 .body-personalizado{
     background-color: rgb(4, 4, 4) !important;
     color: rgba(255, 255, 255, 0.955);
     
 }
 
-
+.up-navbar{
+    background: linear-gradient(60deg, #ab47bc, #8e24aa) !important;
+}
 
 .links{
     text-decoration: none;
-    color: white;
-    padding: 5px;
-    margin-top: 5px;
-    margin-bottom: 5px;
-    margin-left: 90vw;
+    color: white !important;
+}
+
+.main-title{
+    margin: 40px !important;
 }
 
 .LogoHome{
-    width: 200px;
+    max-width: 50px;
+    max-height: 50px;
+}
+
+.footer{
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    background: linear-gradient(60deg, #ab47bc, #8e24aa) !important;
+    height: 70px;
+}
+
+.flex{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
