--- a/public/css/estilos.css
+++ b/public/css/estilos.css
@@ -1,5 +1,5 @@
 html, body {
-    height: 100%;
+    /* height: 100%; */
     margin: 0;
     position: relative;
 }
@@ -49,3 +49,12 @@ p{
     justify-content: center;
     align-items: center;
 }
+
+.imagen-edit{
+    width: 100%;
+}
+
+.yeka{
+    width: 150px;
+}
+  
